<resources>
    <string name="app_name">QuanLyNhanVienActivity</string>
    <string name="use_id">UserID</string>
    <string name="user_name">User Name</string>
    <string name="department">Department</string>
    <string name="status">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ma_nhan_vien">Mã nhân viên</string>
    <string name="ten_nhan_vien">Tên nhân viên:</string>
    <string name="ma_nv">Mã nhân viên:</string>
    <string name="tuoi">Tuổi</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="bo_phan">Bộ phận</string>
    <string name="chuc_vu">Chức vụ</string>
    <string name="nhap_thong_tin">Nhập thông tin</string>
    <string name="nhap_ten">Nhập tên</string>
</resources>