<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginStart="60dp"
        android:background="@drawable/custom_bg_image"
        android:src="@drawable/user"/>
    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_avatar"
        android:layout_marginStart="@dimen/dp20"
        android:text="@string/use_id"
        android:layout_marginTop="@dimen/dp10"/>
    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_avatar"
        android:layout_below="@+id/tv_user_id"
        android:layout_marginStart="@dimen/dp20"
        android:text="@string/user_name"
        android:layout_marginTop="@dimen/dp10"/>
    <TextView
        android:id="@+id/tv_user_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_avatar"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/department"
        />
    <TextView
        android:id="@+id/tv_user_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/status"
        />
    <CheckBox
        android:id="@+id/cb_item"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:visibility="gone"
        />

</RelativeLayout>