<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list_view.adapter.DetailStaffActivity">
  <ImageView
      android:id="@+id/iv_avatar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp200"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="@dimen/dp20" />
  <TextView
      android:id="@+id/tv_label_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dp20"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/ma_nv"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintWidth_percent="0.4"/>
  <TextView
      android:id="@+id/tv_staff_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
      app:layout_constraintStart_toEndOf="@+id/tv_label_id"
      android:layout_marginStart="@dimen/dp10"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/ma_nhan_vien"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.5"
      />
  <TextView
      android:id="@+id/tv_label_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_id"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dp20"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/ten_nhan_vien"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.4"/>
  <TextView
      android:id="@+id/tv_staff_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_id"
      app:layout_constraintStart_toEndOf="@+id/tv_label_name"
      android:layout_marginStart="@dimen/dp10"
      android:layout_marginTop="@dimen/dp10"
      android:text="Tên nhân viên"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.5" />
  <TextView
      android:id="@+id/tv_label_age"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_name"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dp20"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/tuoi"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.4"/>
  <TextView
      android:id="@+id/tv_staff_age"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_name"
      app:layout_constraintStart_toEndOf="@+id/tv_label_age"
      android:layout_marginStart="@dimen/dp10"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/tuoi"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.5"
      />
  <TextView
      android:id="@+id/tv_label_address"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_age"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dp20"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/dia_chi"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.4"/>
  <TextView
      android:id="@+id/tv_staff_address"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_age"
      app:layout_constraintStart_toEndOf="@+id/tv_label_address"
      android:layout_marginStart="@dimen/dp10"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/dia_chi"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.5"
      />
  <TextView
      android:id="@+id/tv_label_department"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_address"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dp20"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/bo_phan"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.4"/>
  <TextView
      android:id="@+id/tv_staff_department"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_address"
      app:layout_constraintStart_toEndOf="@+id/tv_label_department"
      android:layout_marginStart="@dimen/dp10"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/bo_phan"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.5"
      />
  <TextView
      android:id="@+id/tv_label_status"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_department"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dp20"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/chuc_vu"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.4"/>
  <TextView
      android:id="@+id/tv_staff_status"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/tv_label_department"
      app:layout_constraintStart_toEndOf="@+id/tv_label_department"
      android:layout_marginStart="@dimen/dp10"
      android:layout_marginTop="@dimen/dp10"
      android:text="@string/chuc_vu"
      android:textSize="18sp"
      app:layout_constraintWidth_percent="0.5"
      />

</androidx.constraintlayout.widget.ConstraintLayout>