<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_item"
    android:layout_marginHorizontal="@dimen/dp8"
    android:layout_marginVertical="@dimen/dp8"
    >

    <ImageView
        android:id="@+id/r_iv_avatar"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:background="@drawable/custom_bg_image"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/r_tv_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/r_iv_avatar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp8"
        android:text="Mã NV: "
      />
    <TextView
        android:id="@+id/r_tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/r_tv_label_id"
        app:layout_constraintTop_toTopOf="@id/r_tv_label_id"
        app:layout_constraintBottom_toBottomOf="@id/r_tv_label_id"
        android:layout_marginStart="@dimen/dp8"
        android:text="mã nv"
        />
    <TextView
        android:id="@+id/r_tv_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/r_iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/r_tv_label_id"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginStart="16dp"
        android:text="Tên NV: "/>
    <TextView
        android:id="@+id/r_tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/r_tv_label_name"
        app:layout_constraintTop_toTopOf="@id/r_tv_label_name"
        app:layout_constraintBottom_toBottomOf="@id/r_tv_label_name"
        android:layout_marginStart="@dimen/dp8"
        android:text="@string/user_name" />
    <TextView
        android:id="@+id/r_tv_label_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/r_iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/r_tv_user_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp8"
        android:text="Bộ phận: "
        />
    <TextView
        android:id="@+id/r_tv_user_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        app:layout_constraintStart_toEndOf="@id/r_tv_label_department"
        app:layout_constraintTop_toTopOf="@id/r_tv_label_department"
        app:layout_constraintBottom_toBottomOf="@id/r_tv_label_department"
        android:text="@string/department"
        />

    <ImageView
        android:id="@+id/iv_ic_department"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_dev"
        app:layout_constraintBottom_toBottomOf="@+id/r_tv_user_department"
        app:layout_constraintStart_toEndOf="@id/r_tv_user_department"
        app:layout_constraintTop_toTopOf="@+id/r_tv_user_department"
        android:layout_marginStart="@dimen/dp8"/>

    <TextView
        android:id="@+id/r_tv_label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/r_iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/r_tv_user_department"
        android:layout_marginBottom="@dimen/dp8"
        android:text="Trạng thái: "
        />

    <TextView
        android:id="@+id/r_tv_user_status"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintStart_toEndOf="@id/r_tv_label_status"
        app:layout_constraintTop_toTopOf="@+id/r_tv_label_status"
        app:layout_constraintBottom_toBottomOf="@id/r_tv_label_status"
        android:layout_marginStart="@dimen/dp8"/>

    <ImageView
        android:id="@+id/iv_ic_status"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_intent"
        app:layout_constraintBottom_toBottomOf="@+id/r_tv_user_status"
        app:layout_constraintStart_toEndOf="@id/r_tv_user_status"
        app:layout_constraintTop_toTopOf="@+id/r_tv_user_status" />

    <CheckBox
        android:id="@+id/cb_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
<!--        android:visibility="gone"-->
        />

</androidx.constraintlayout.widget.ConstraintLayout>